Мade auto migrations

--- a/QA_Hub/Dockerfile
+++ b/QA_Hub/Dockerfile
@@ -10,8 +10,5 @@ RUN pip install -r /usr/src/requirements.txt
 
 COPY ./QA_Hub /usr/src/QA_Hub
 
-COPY docker-entrypoint.sh /usr/local/bin/docker-entrypoint.sh
-RUN chmod +x /usr/local/bin/docker-entrypoint.sh
-
 EXPOSE 8000
-CMD ["python", "manage.py", "runserver", "0.0.0.0:8000", "--insecure"]
+ENTRYPOINT ["bash", "-c", "exec \"$@\"", "--"]
